<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detailview.PokemonDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/pokemonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="Pikachu" />

                <TextView
                    android:id="@+id/pokemonHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    tools:text="@string/pokemon_height"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pokemonWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/pokemon_weight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/type_title"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/typesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/details_type_item" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:text="@string/statistics_title"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/statsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbars="horizontal"
                    tools:itemCount="2"
                    tools:listitem="@layout/details_stats_item" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/pokemonImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignTop="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/pikachu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>